# spake-cli

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml  master.yml  release.yml  rust.yml
scripts/: brew_formula_template.py  release_homebrew.py
src/: file.rs  main.rs  params.rs  translate.rs
src/gather/: extractor.rs  gather.rs  mod.rs  yolo.rs
src/translate/: mod.rs  models.rs  test.rs  translate.rs  translation_request.rs  translation_response.rs
tests/: bad_strings.json  bad_strings2.json  strings_en.json  strings_es.json  test.json
