[package]
name = "spake-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["blocking", "json"]}
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
url = "2.3.1"

[target.x86_64-unknown-linux-gcc]
linker = "x86_64-linux-musl-gcc"

[target.x86_64-apple-darwin]
linker = "x86_64-apple-darwin21.1-clang"
ar = "x86_64-apple-darwin21.1-ar"

[target.aarch64-apple-darwin]
linker = "aarch64-apple-darwin21.1-clang"
ar = "aarch64-apple-darwin21.1-ar"