[package]
name = "spake-cli"
version = "0.0.0" #Dont change this version it will be overwritten by the build script
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive", "env"] }
futures = "0.3.25"
reqwest = { version = "0.11.12", features = ["blocking", "json"]}
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
url = "2.3.1"
walkdir = "2.3.2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
